@@ -408,12 +408,6 @@ c.POSIXct <- function(..., recursive = FALSE)
 c.POSIXlt <- function(..., recursive = FALSE)
     as.POSIXlt(do.call("c", lapply(list(...), as.POSIXct)))
 
-## force absolute comparisons
-all.equal.POSIXct <- function(target, current, ..., tolerance = 1e-3, scale = 1)
-{
-    check_tzones(target, current)
-    NextMethod("all.equal", tolerance = tolerance, scale = scale)
-}
 
 
 ISOdatetime <- function(year, month, day, hour, min, sec, tz = "")
